--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ AppEducation/.vs/AppEducation/v16/.suo
 *.pdb
 AppEducation/AppEducation/bin/*
 AppEducation/.vs/AppEducation/v16/.suo
+AppEducation/.vs/AppEducation/DesignTimeBuild/.dtbcache.v2
