them 1 it vao connectionhub.js

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ AppEducation/.vs/AppEducation/v16/.suo
 AppEducation/AppEducation/bin/*
 AppEducation/.vs/AppEducation/v16/.suo
 AppEducation/.vs/AppEducation/DesignTimeBuild/.dtbcache.v2
+AppEducation/.vs/AppEducation/v16/.suo
