--- a/AppEducation/AppEducation/AppEducation.csproj
+++ b/AppEducation/AppEducation/AppEducation.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="NHibernate" Version="5.3.5" />
   </ItemGroup>
 
   <ItemGroup>
